--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native-search-box": "0.0.8",
     "react-native-swiper": "^1.5.4",
     "react-native-viewpager": "^0.2.13",
-    "react-navigation": "^1.0.0-beta.9"
+    "react-navigation": "^1.0.0-beta.9",
+    "react-native-elements": "^0.11.2",
+    "react-native-banner-lite": "^1.0.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
